--- a/coinmetrica/coinprice/templates/coinprice/base.html
+++ b/coinmetrica/coinprice/templates/coinprice/base.html
@@ -1,7 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>{{ title }}</title>
+    <link type="text/css" href="{% static 'coinprice/css/styles.css' %}" rel="stylesheet" />
+    <meta http-equiv="Content-Type" content="text/css; charset=utf-8">
+    <link rel="shortcut icon" href="{% static 'coinprice/images/main.ico' %}" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"
 </head>
 <body>
 {% block mainmenu %}
