--- a/coinmetrica/coinprice/static/coinprice/css/styles.css
+++ b/coinmetrica/coinprice/static/coinprice/css/styles.css
@@ -5,7 +5,7 @@ html, body {
 	height: 100%;
 	width: 100%;
 	color: #444;
-	background: red;
+	background: #cfe9f3;
 }
 
 a {
@@ -13,7 +13,7 @@ a {
 	text-decoration: none;
 }
 a:hover {
-	color: #CC0000;
+	color: #cfe2f3;
 	text-decoration: underline;
 }
 
