--- a/coinmetrica/coinprice/templates/coinprice/base.html
+++ b/coinmetrica/coinprice/templates/coinprice/base.html
@@ -6,16 +6,24 @@
     <link type="text/css" href="{% static 'coinprice/css/styles.css' %}" rel="stylesheet" />
     <meta http-equiv="Content-Type" content="text/css; charset=utf-8">
     <link rel="shortcut icon" href="{% static 'coinprice/images/main.ico' %}" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 {% block mainmenu %}
-    <ul>
-        {% for m in menu %}
-        <li>{{m}}</li>
-        {% endfor %}
-    </ul>
+    <div class="header">
 
+        <ul id="mainmenu" class="mainmenu">
+        <li class="logo"><a href="/"><div class="logo"></div></a></li>
+{% for m in menu %}
+    {% if not forloop.last %}
+        <li><a href="{% url m.url_name %}">{{m.title}}</a></li>
+    {% else %}
+        <li class="last"><a href="{% url m.url_name %}">{{m.title}}</a></li>
+    {% endif %}
+{% endfor %}
+        </ul>
+        <div class="clear"></div>
+    </div>
 {% endblock mainmenu %}
 {% block content %}
 {% endblock content %}
