--- a/coinmetrica/coinprice/templates/coinprice/index.html
+++ b/coinmetrica/coinprice/templates/coinprice/index.html
@@ -1,6 +1,12 @@
 {% extends 'coinprice/base.html' %}
 
 {% block content %}
+<ul class="list-articles">
+    {% for p in posts %}
+        <li><h2>{{p.title}}<h2></li>
+    {% autoescape on %}
+</ul>
+
 <h1>{{Title}}</h1>
 
 <ul>
