--- a/coinmetrica/coinprice/templates/coinprice/base.html
+++ b/coinmetrica/coinprice/templates/coinprice/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+
 {% block mainmenu %}
     <div class="header">
 
@@ -25,7 +27,23 @@
         <div class="clear"></div>
     </div>
 {% endblock mainmenu %}
+
+{% if cat_selected == 0%}
+    <li class="selected">exchanges</li>
+{% else %}
+    <li><a href="{% url 'home' %}">exchanges</a></li>
+{% endif %}
+
+{% for c in cats %}
+   {% if c.pk == cat_selected %}
+        <li class="selected">{{c.name}}</li>
+    {% else %}
+        <li><a href="{{ c.get_absolute_url }}">{{c.name}}</a></li>
+    {% endif %}
+{% endfor %}
+
 {% block content %}
 {% endblock content %}
+
 </body>
 </html>
