--- a/coinmetrica/coinprice/templates/coinprice/index.html
+++ b/coinmetrica/coinprice/templates/coinprice/index.html
@@ -1,10 +1,12 @@
 {% extends 'coinprice/base.html' %}
 
 {% block content %}
+
 <ul class="list-articles">
     {% for p in posts %}
-        <li><h2>{{p.title}}<h2></li>
-    {% autoescape on %}
+        <li><h2>{{p.title}}</h2></li>
+    {% endfor %}
+
 </ul>
 
 <h1>{{Title}}</h1>
@@ -12,11 +14,10 @@
 <ul>
     {% for p in posts %}
     <li>
-        <h2>{{p.title}}<h2>
+        <h2>{{p.title}}</h2>
         <p>{{p.content}}</p>
         <hr>
     </li>
     {% endfor %}
 </ul>
-
 {% endblock %}
